removing fixed header (not working on mobile)

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,5 @@
 body {
     margin: 1em;
-    margin-top: 10em;
     padding: 0;
     border: 0;
     color: $text-color;
@@ -23,12 +22,6 @@ a {
 
 p.header {
   font-family: $technic-font-family;
-  position: fixed;
-  background-color: $background-color;
-  top: 0;
-  margin-top: 0;
-  right: 0;
-  left: 0;
 }
 p.header span,
 p.header a {
